src/test/ui/borrowck/borrowck-move-in-irrefut-pat.ast.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-move-in-irrefut-pat.rs:16:13
   |
LL | fn arg_item(&_x: &String) {}
   |             ^--
   |             ||
   |             |hint: to prevent move, use `ref _x` or `ref mut _x`
   |             cannot move out of borrowed content

error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-move-in-irrefut-pat.rs:21:11
   |
LL |     with(|&_x| ())
   |           ^--
   |           ||
   |           |hint: to prevent move, use `ref _x` or `ref mut _x`
   |           cannot move out of borrowed content

error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-move-in-irrefut-pat.rs:27:9
   |
LL |     let &_x = &"hi".to_string();
   |         ^--
   |         ||
   |         |hint: to prevent move, use `ref _x` or `ref mut _x`
   |         cannot move out of borrowed content

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0507`.
